--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-# Project files to ignore
+# List of files for git to ignore
 
-.sass-cache/
+.DS_Store
+.AppleDouble
+.LSOverride
 
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Vim
+Session.vim
+
+# Node
+node_modules/*
