--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "gulp-util": "^2.2.19",
     "gulp-watch": "^0.6.8",
     "imagemin-pngcrush": "^0.1.0",
-    "jshint-stylish": "^0.2.0"
+    "jshint-stylish": "^0.2.0",
+    "tachyons-cli": "^0.3.2"
   },
   "scripts": {
     "start": "gulp"
